--- a/eMantrana/src/main/resources/application.properties
+++ b/eMantrana/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port= 8081
 
+spring.datasource.url=jdbc:mysql://localhost/eMantrana
+spring.datasource.username=prafull
+spring.datasource.password=prafull
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
